# object_pose

./: .gitignore  CMakeLists.txt  README.md
data/: blue.gmm  cyan.gmm  green.gmm  magenta.gmm  red.gmm  yellow.gmm
include/: dbscan.hpp  header.hpp  image.hpp  pose.hpp  utils.hpp
src/: image.cpp  kdtree.cpp  main.cpp  pose.cpp  utils.cpp
